# ensemble-cross-validation

./: .gitignore  README.md  demo.ipynb  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/main_function/: cv.rst  ensemble.rst  gcate.rst  lfc.rst
docs/source/tutorials/: basics.ipynb  cgcv_l1_huber.ipynb  gcv.ipynb  multitask.ipynb  random_forests.ipynb
sklearn_ensemble_cv/: __init__.py  cross_validation.py  ensemble.py  simu_data.py  utils.py
tutorials/: basics.ipynb  cgcv_l1_huber.ipynb  multitask.ipynb  random_forest.ipynb
