[metadata]
name = sklearn_ensemble_cv
description = sklearn_ensemble_cv is a Python module for performing accurate and efficient ensemble cross-validation methods.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/jaydu1/ensemble-cross-validation
project_urls =
    Bug Tracker = https://github.com/jaydu1/ensemble-cross-validation/issues
    Changelog = https://github.com/jaydu1/ensemble-cross-validation/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    scikit-learn
    pandas
    numpy
